--- a/package.json
+++ b/package.json
@@ -48,10 +48,14 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-import-resolver-typescript": "^3.5.4",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "prettier": "^2.8.1"
   }
 }
