removed unstable sx dependency

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,10 +21,12 @@
     "rules": {
         "@typescript-eslint/ban-ts-comment": "off",
         "prefer-const": "off",
+        "no-empty-pattern": "off",
         "import/no-named-as-default-member": "off",
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
-        "@typescript-eslint/no-empty-function": "off"
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-unused-vars": "off"
     }
 }
