--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.6.4",
+    "@mui/system": "^5.6.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.23",
-    "@types/react": "^18.0.31",
-    "@types/react-dom": "^18.0.11",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "color": "^4.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
+    "react-use": "^17.4.0",
+    "tss-react": "^4.8.2",
     "typescript": "^4.9.5"
   },
   "scripts": {
@@ -18,7 +22,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint:eslint": "eslint --ext .tsx src/ --fix"
-
   },
   "eslintConfig": {
     "extends": [
