--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "baseUrl": "src",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -22,6 +23,7 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src/"
+    "src/",
+    "global.d.ts"
   ]
 }
