--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.6.4",
     "@mui/system": "^5.6.4",
     "@types/jest": "^27.5.2",
