--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "@mui/icons-material": "^5.11.11",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.6.4",
     "@mui/system": "^5.6.4",
+    "@mui/x-data-grid": "^6.0.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.23",
     "color": "^4.2.3",
