--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "color": "^4.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "react-use": "^17.4.0",
     "tss-react": "^4.8.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@reduxjs/toolkit": "^1.9.3",
+    "immer": "^9.0.21",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "thunk": "^0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
