--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Univille game management",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=development nodemon --inspect ./src/index.ts"
   },
   "repository": {
     "type": "git",
