--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Build
-        run: npm run build
+        run: yarn build
 
       - name: Deploy
         uses: appleboy/ssh-action@master
@@ -33,5 +33,5 @@ jobs:
           script: |
             cd /root/apps/univille
             git pull
-            npm install --production
+            yarn install --production
             pm2 restart all
