--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
           script: |
             cd /root/apps/univille
             git pull
-            yarn install --production
+            yarn install
             pm2 restart all
