--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
             git pull
             yarn install --production
             if ! pm2 describe univille-fs >/dev/null 2>&1 ; then
-              pm2 start build/index.js --name "your-app"
+              pm2 start build/index.js --name "univille-fs"
             else
               pm2 restart univille-fs
             fi
