update dployment action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
             fi
             cd /root/apps/univille
             git pull
-            yarn install --production
+            yarn install
