--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: cd client && yarn install --frozen-lockfile
 
       - name: Build
-        run: cd .. && yarn build
+        run: pwd && yarn build
 
       - name: Deploy
         uses: appleboy/ssh-action@master
