resolving eslint conflicts

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+    "root": true,
     "env": {
         "browser": true,
         "es6": true,
@@ -7,6 +8,7 @@
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
         "plugin:import/recommended",
         "plugin:import/electron",
         "plugin:import/typescript"
