--- a/client/package.json
+++ b/client/package.json
@@ -9,18 +9,6 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.31",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
     "@material-table/core": "^6.1.15",
     "@material-table/exporters": "^1.1.0",
     "@mui/icons-material": "^5.11.16",
@@ -28,17 +16,30 @@
     "@mui/system": "^5.6.4",
     "@mui/x-data-grid": "^6.0.4",
     "@reduxjs/toolkit": "^1.9.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.31",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "color": "^4.2.3",
     "immer": "^9.0.21",
+    "process": "^0.11.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "thunk": "^0.0.1",
-    "tss-react": "^4.8.2"
+    "tss-react": "^4.8.2",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/node-sass": "^4.11.3",
