--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,9 @@ jobs:
             git pull
             yarn install
             yarn build
+            cd /root/apps/univille/client
+            yarn install
+            yarn build
             if ! pm2 describe univille-fs >/dev/null 2>&1 ; then
               pm2 start /root/apps/univille/build/index.js --name "univille-fs"
             else
