--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-table/core": "^6.1.15",
     "@material-table/exporters": "^1.1.0",
