--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/cli": "^7.20.7",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
