--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,9 +48,17 @@ jobs:
             git pull
             yarn install-all
             yarn build-all
-            if ! pm2 describe univille-fs >/dev/null 2>&1 ; then
-              pm2 start /root/apps/univille/build/index.js --name "univille-fs"
+            if [ -f "ecosystem.config.js" ] ; then
+              if ! pm2 describe univille-fs >/dev/null 2>&1 ; then
+                pm2 start /root/apps/univille/ecosystem.config.js --env production
+              else
+                pm2 restart /root/apps/univille/ecosystem.config.js --env production
+              fi
             else
-              pm2 restart univille-fs
+              if ! pm2 describe univille-fs >/dev/null 2>&1 ; then
+                pm2 start /root/apps/univille/build/index.js --name "univille-fs"
+              else
+                pm2 restart univille-fs
+              fi
             fi
             sed -i "/UNIVILLE_VERSION=/c\UNIVILLE_VERSION=${{ steps.package.outputs.version }}" /etc/environment
