--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,8 +63,8 @@ jobs:
             yarn install --frozen-lockfile
             yarn build
             if ! pm2 describe univille-fs >/dev/null 2>&1 ; then
-                pm2 start /root/apps/univille/build/index.js --name "univille-fs" --env production
+                pm2 start /root/apps/univille/build/index.js --name "univille-fs"
             else
-                pm2 restart univille-fs --env production
+                pm2 restart univille-fs
             fi
             sed -i "/UNIVILLE_VERSION=/c\UNIVILLE_VERSION=${{ steps.package.outputs.version }}" /etc/environment
