--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,22 +24,22 @@ jobs:
         with:
           node-version: '16'
 
-      - name: Install server dependencies
-        run: |
-          yarn install --frozen-lockfile
-
-      - name: Build server
-        run: yarn build
-
-      - name: Install client dependencies
-        run: |
-          cd client
-          yarn install --frozen-lockfile
-
-      - name: Build client
-        run: |
-          cd client
-          yarn build
+#      - name: Install server dependencies
+#        run: |
+#          yarn install
+#
+#      - name: Build server
+#        run: yarn build
+#
+#      - name: Install client dependencies
+#        run: |
+#          cd client
+#          yarn install
+#
+#      - name: Build client
+#        run: |
+#          cd client
+#          yarn build
 
       - name: Fetch version
         id: package
@@ -57,10 +57,10 @@ jobs:
             fi
             cd /root/apps/univille
             git pull
-            yarn install --frozen-lockfile
+            yarn install
             yarn build
             cd /root/apps/univille/client
-            yarn install --frozen-lockfile
+            yarn install
             yarn build
             if ! pm2 describe univille-fs >/dev/null 2>&1 ; then
                 pm2 start /root/apps/univille/build/index.js --name "univille-fs"
