--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,9 @@ jobs:
             yarn build
             cd /root/apps/univille/client
             yarn install
+            rm .prettierrc.json
+            rm .eslintrc.json
+            rm .eslintignore
             yarn build
             if ! pm2 describe univille-fs >/dev/null 2>&1 ; then
                 pm2 start /root/apps/univille/build/index.js --name "univille-fs"
