--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,22 +24,22 @@ jobs:
         with:
           node-version: '16'
 
-#      - name: Install server dependencies
-#        run: |
-#          yarn install
-#
-#      - name: Build server
-#        run: yarn build
-#
-#      - name: Install client dependencies
-#        run: |
-#          cd client
-#          yarn install
-#
-#      - name: Build client
-#        run: |
-#          cd client
-#          yarn build
+      - name: Install server dependencies
+        run: |
+          yarn install
+
+      - name: Build server
+        run: yarn build
+
+      - name: Install client dependencies
+        run: |
+          cd client
+          yarn install
+
+      - name: Build client
+        run: |
+          cd client
+          yarn build
 
       - name: Fetch version
         id: package
