--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,14 @@
-//{
-//  "presets": [
-//    "@babel/preset-env",
-//    "@babel/preset-typescript"
-//  ],
-//  "plugins": [
-//    ["module-resolver", {
-//      "root": ["."],
-//      "alias": {
-//        "src": "./src"
-//      }
-//    }]
-//  ]
-//}
+{
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-typescript"
+  ],
+  "plugins": [
+    ["module-resolver", {
+      "root": ["."],
+      "alias": {
+        "src": "./src"
+      }
+    }]
+  ]
+}
